# VisaScraper

./: .env.example  .gitignore  Dockerfile  README.md  dfdf  docker-compose.yml  fff  pyproject.toml  token.json  visadata.db
src/: credentials.json  credentials_oauth.json  data.json  drive.yaml  token.json
src/visascraper/: app.py  config.py  dto.py  jobs.py  main.py  session_manager.py
src/visascraper/bot/: bot.py  handler.py  keyboards.py  notification.py
src/visascraper/database/: crud.py  db.py  models.py
src/visascraper/infrasctructure/: google_sheets.py
src/visascraper/infrastructure/: event_bus.py
src/visascraper/parser_service/: data_models.py  data_parser.py  google_sheets_manager.py  pdf_manager.py  scheduler.py  service.py  session_manager.py  yandex_uploader.py
src/visascraper/services/: __init__.py  scraper.py  sheets.py  storage.py
src/visascraper/utils/: driver_uploader.py  logger.py  parser.py  scheduler.py  sheets_rotator.py  test.py
tests/: test_data_parser_sessions.py  test_parser_utils.py  test_sheets_manager.py  test_sheets_rotator.py  test_sheets_write_existing_only.py  test_stay_retry_and_scheduler.py
visascraper/: .env  .gitignore  Dockerfile  pyproject.toml  visadata.db
visascraper/src/: data.json  drive_account.json  service_account.json
visascraper/src/visascraper/: captcha_solver.py  main.py  session_manager.py
visascraper/src/visascraper/bot/: bot.py  keyboards.py  notification.py
visascraper/src/visascraper/database/: base.py  models.py
visascraper/src/visascraper/infrasctructure/: google_sheets.py
visascraper/src/visascraper/utils/: logger.py
